small fixes on whitespaces

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -814,19 +814,27 @@ video {
 }
 
 .mb-7 {
-  margin-bottom: 1.75rem;
+   margin-bottom: 1.75rem;
 }
 
 .mb-20 {
-  margin-bottom: 5rem;
+   margin-bottom: 5rem;
+}
+
+.-mt-1 {
+   margin-top: -0.25rem;
+}
+
+.mb-6 {
+   margin-bottom: 1.5rem;
 }
 
 .block {
-  display: block;
+   display: block;
 }
 
 .inline-block {
-  display: inline-block;
+   display: inline-block;
 }
 
 .flex {
@@ -1659,19 +1667,23 @@ video {
 }
 
 .pb-20 {
-  padding-bottom: 5rem;
+   padding-bottom: 5rem;
 }
 
 .pt-18 {
-  padding-top: 4.5rem;
+   padding-top: 4.5rem;
+}
+
+.pb-18 {
+   padding-bottom: 4.5rem;
 }
 
 .text-left {
-  text-align: left;
+   text-align: left;
 }
 
 .text-center {
-  text-align: center;
+   text-align: center;
 }
 
 .text-right {
